# GoIT_Team_1_Data_Science_Project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  db.py  main.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 0e0634dcb388_init.py  263ab02049ba_payements.py  2db08e52361d_init.py  81191007028a_init.py
app/services/mail/: main.py  payment_email.py
app/services/mail/templates/: payemnt_email.html
license_plates/: controllers.py  dependencies.py  find.py  models.py  photo2text.py  routers.py  schemas.py
models/: ocr.py
models/Detection/: finetune_yolo.py
models/OCR/: create_ocr_labels.py
paymets/: controllers.py  dependencies.py  models.py  routers.py  schemas.py
users/: controllers.py  dependencies.py  models.py  routers.py  schemas.py  seed.py
