[tool.poetry]
name = "app"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
sqlalchemy = "^2.0.28"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
faker = "^24.3.0"
python-dotenv = "^1.0.1"
typer = "^0.9.0"
uvicorn = {extras = ["extras"], version = "^0.29.0"}
python-multipart = "^0.0.9"
redis = "^5.0.3"
aiofiles = "^23.2.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
requests = "^2.31.0"
requests-mock = "^1.12.1"
fastapi-mail = "^1.4.1"
easyocr = "^1.7.1"
numpy = "<2.0.0"
python-bidi = "^0.4.2"
matplotlib = "^3.4.2"
opencv-python-headless = "^4.10.0.84"
opencv-python = "^4.10.0.84"
transformers = "^4.43.3"
gdown = "^5.2.0"
ultralytics = "8.0.196"
torch = "2.3.1"
roboflow = "1.1.36"
jiwer = "^3.0.4"
torchvision = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
